--- a/Mh/bin/AndroidManifest.xml
+++ b/Mh/bin/AndroidManifest.xml
@@ -182,6 +182,11 @@
         <activity
             android:name="com.maybe.mh.eb.HTML5Activity"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
+            android:launchMode="singleInstance" />
+        <activity
+            android:name="com.maybe.mh.SellerLoginActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait" />
     </application>
 
